--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -7,13 +7,13 @@
         height: 130px;
     }
 
-    .left {
+    /* .left {
         margin-left: -18% !important;
     }
-    
+
     .right {
         margin-right: -18% !important;
-    }
+    } */
 }
 
 @media (max-width: 425px) {
