--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,10 @@
 /* header section */
 
+nav button {
+    border: none !important;
+  }
+  
+
 .solid {
     background-color: rgba(255,0,0,0.7);
     transition: 0.6s;
@@ -64,4 +69,11 @@ nav * {
 
 .footer {
     height: 130px !important;
+}
+
+
+.btn-primary {
+    background-color: white;
+    color: rgb(13, 183, 235);
+    border: 3px solid rgb(13, 183, 235);
 }
